service/gcloud-proxy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcloud-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcloud-proxy
  template:
    metadata:
      labels:
        app: gcloud-proxy
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      containers:
        - name: gcloud-proxy
          image: IMAGE
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 128m
              memory: 512Mi
            limits:
              cpu: 128m
              memory: 512Mi
