service/gcloud-proxy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcloud-proxy
  labels:
    app: gcloud-proxy
spec:
  ports:
    - port: 8080
      name: rest
  selector:
    app: gcloud-proxy
